--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@web3uikit/icons": "^0.1.12",
     "bootstrap": "^5.2.2",
+    "ethers": "^5.7.1",
     "moralis-v1": "^1.11.0",
     "next": "12.3.1",
     "react": "18.2.0",
